MySFDCProject/src/objects/Book__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Review_Rating__c</fullName>
        <formula>Total_Review_Rating__c  /  No_Of_Review__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Review Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_Of_Review__c</fullName>
        <label>No. Of Review</label>
        <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>Publisher__c</referenceTo>
        <relationshipLabel>Books</relationshipLabel>
        <relationshipName>Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Review_Rating__c</fullName>
        <label>Total Review Rating</label>
        <summarizedField>Review__c.Average_Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Book__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>